--- a/IORunnerExtension/Makefile
+++ b/IORunnerExtension/Makefile
@@ -29,9 +29,8 @@ $(MODULE_2_NAME)_Darwin_LFLAGS = $($(MODULE_2_NAME)_SHLIB_PATH) -arch x86_64 -dy
 	-Xlinker -rpath -Xlinker @executable_path/../frameworks \
 	-compatibility_version 1 -current_version 1 \
 	-framework $(MODULE_1_NAME) -framework Foundation
-
 $(MODULE_2_NAME)_Linux_LFLAGS = $($(MODULE_2_NAME)_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl -lFoundation -lbsd \
-	-l$(MODULE_1_NAME) -shared -fuse-ld=gold \
+	-l$(MODULE_1_NAME) -shared -flto -fuse-ld=gold \
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib/x86_64/$(MODULE_2_NAME).swiftmodule' \
