--- a/Extensions/OpendkimHandler/Config.ini
+++ b/Extensions/OpendkimHandler/Config.ini
@@ -2,11 +2,13 @@
 ; OpendkimHandler extension config file
 [OpendkimHandler]
 
-ProcessName = dovecot
+ProcessName = opendkim
 
-ProcessStopCommand = "service opendkim stop"
+ProcessStopCommand = "/usr/bin/service opendkim stop"
 
-ProcessStartCommand = "service opendkim start"
+ProcessStartCommand = "/usr/bin/service opendkim start"
 
 ; Process checking interval (seconds)
 ProcessFrequency = 30
+
+ProcessTimeout = 60
