--- a/Extensions/PHPFastCGIHandler/Config.ini
+++ b/Extensions/PHPFastCGIHandler/Config.ini
@@ -4,9 +4,11 @@
 
 ProcessName = php-fpm
 
-ProcessStopCommand = "service php-fpm stop"
+ProcessStopCommand = "/usr/bin/service php-fpm stop"
 
-ProcessStartCommand = "service php-fpm start"
+ProcessStartCommand = "/usr/bin/service php-fpm start"
 
 ; Process checking interval (seconds)
 ProcessFrequency = 30
+
+ProcessTimeout = 60
