--- a/Extensions/PostfixHandler/Config.ini
+++ b/Extensions/PostfixHandler/Config.ini
@@ -4,9 +4,11 @@
 
 ProcessName = "-f postfix"
 
-ProcessStopCommand = "service postfix stop"
+ProcessStopCommand = "/usr/bin/service postfix stop"
 
-ProcessStartCommand = "service postfix start"
+ProcessStartCommand = "/usr/bin/service postfix start"
 
 ; Process checking interval (seconds)
 ProcessFrequency = 30
+
+ProcessTimeout = 60
