--- a/Extensions/SSHHandler/Config.ini
+++ b/Extensions/SSHHandler/Config.ini
@@ -2,11 +2,13 @@
 ; SSHHandler extension config file
 [SSHHandler]
 
-ProcessName = "sshd"
+ProcessName = "-f /usr/sbin/sshd"
 
-ProcessStopCommand = "service ssh stop"
+ProcessStopCommand = "/usr/bin/service ssh stop"
 
-ProcessStartCommand = "service ssh start"
+ProcessStartCommand = "/usr/bin/service ssh start"
 
 ; Process checking interval (seconds)
 ProcessFrequency = 30
+
+ProcessTimeout = 60
