--- a/Extensions/DovecotHandler/Config.ini
+++ b/Extensions/DovecotHandler/Config.ini
@@ -4,9 +4,11 @@
 
 ProcessName = dovecot
 
-ProcessStopCommand = "service dovecot stop"
+ProcessStopCommand = "/usr/bin/service dovecot stop"
 
-ProcessStartCommand = "service dovecot start"
+ProcessStartCommand = "/usr/bin/service dovecot start"
 
 ; Process checking interval (seconds)
 ProcessFrequency = 30
+
+ProcessTimeout = 60
