--- a/Extensions/NginxHandler/Config.ini
+++ b/Extensions/NginxHandler/Config.ini
@@ -4,9 +4,11 @@
 
 ProcessName = nginx
 
-ProcessStopCommand = "service nginx stop"
+ProcessStopCommand = "/usr/bin/service nginx stop"
 
-ProcessStartCommand = "service nginx start"
+ProcessStartCommand = "/usr/bin/service nginx start"
 
 ; Process checking interval (seconds)
 ProcessFrequency = 30
+
+ProcessTimeout = 60
