--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,21 @@ os:
   - linux
   - osx
 language: generic
-env:
-  - SWIFT_VERSION=swift-3.0-PREVIEW-4
 matrix:
   include:
     - os: linux
       dist: trusty
       sudo: required
-      env: SWIFT_BUILD=Ubuntu14
+      env:
+        - SWIFT_BUILD=Ubuntu14
+        - SWIFT_VERSION=swift-3.0-PREVIEW-4
     - os: linux
       dist: wily
       sudo: required
-      env: SWIFT_BUILD=Ubuntu15
-    - os: osx
-      osx_image: xcode8
-      env: SWIFT_BUILD=OSX
+      env:
+        - SWIFT_BUILD=Ubuntu14
+        - SWIFT_VERSION=swift-3.0-PREVIEW-4
+osx_image: xcode8
 install:
   - ./Travis/BeforeInstall.sh
 script:
