--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ matrix:
       env: BUILD_FOR=trusty_swift3
       after_success:
         - ./Travis/Deploy.sh
-    - os: linux
-      sudo: required
-      dist: wily
-      env: BUILD_FOR=wily_swift3
-      after_success:
-        - ./Travis/Deploy.sh
+    #- os: linux
+    #  sudo: required
+    #  dist: wily
+    #  env: BUILD_FOR=wily_swift3
+    #  after_success:
+    #    - ./Travis/Deploy.sh
     - os: osx
       osx_image: xcode7.3
       env: BUILD_FOR=osx_swift2_2
