--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@
 #    - SWIFT_VERSION=swift-3.0-PREVIEW-4
 #    - APP_VERSION=1.0.1
 language: generic
+sudo: required
 services:
   - docker
 cache:
