--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ matrix:
     - os: osx
       osx_image: xcode7.3
       env: TRAVIS_IMAGE=OSX SWIFT_VERSION=2.2
+      branches:
+        only:
+          - osx
     - os: osx
       osx_image: xcode8
       env: TRAVIS_IMAGE=OSX SWIFT_VERSION=3
