--- a/Extensions/PHPFastCGIHandler/Makefile
+++ b/Extensions/PHPFastCGIHandler/Makefile
@@ -33,6 +33,10 @@ PHPFastCGIHandler_Linux_LFLAGS = $(PHPFastCGIHandler_SHLIB_PATH) -lswiftCore -ls
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 PHPFastCGIHandler_LFLAGS = $(PHPFastCGIHandler_$(OS)_LFLAGS)
 
