--- a/Extensions/SSHHandler/Makefile
+++ b/Extensions/SSHHandler/Makefile
@@ -33,6 +33,10 @@ SSHHandler_Linux_LFLAGS = $(SSHHandler_SHLIB_PATH) -lswiftCore -lswiftGlibc -ldl
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 SSHHandler_LFLAGS = $(SSHHandler_$(OS)_LFLAGS)
 
