--- a/Extensions/DovecotHandler/Makefile
+++ b/Extensions/DovecotHandler/Makefile
@@ -33,6 +33,10 @@ DovecotHandler_Linux_LFLAGS = $(DovecotHandler_SHLIB_PATH) -lswiftCore -lswiftGl
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 DovecotHandler_LFLAGS = $(DovecotHandler_$(OS)_LFLAGS)
 
