--- a/Extensions/MysqlHandler/Makefile
+++ b/Extensions/MysqlHandler/Makefile
@@ -33,6 +33,10 @@ MysqlHandler_Linux_LFLAGS = $(MysqlHandler_SHLIB_PATH) -lswiftCore -lswiftGlibc 
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 MysqlHandler_LFLAGS = $(MysqlHandler_$(OS)_LFLAGS)
 
