--- a/Extensions/NginxHandler/Makefile
+++ b/Extensions/NginxHandler/Makefile
@@ -33,6 +33,10 @@ NginxHandler_Linux_LFLAGS = $(NginxHandler_SHLIB_PATH) -lswiftCore -lswiftGlibc 
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 NginxHandler_LFLAGS = $(NginxHandler_$(OS)_LFLAGS)
 
