--- a/Extensions/TestHandler/Makefile
+++ b/Extensions/TestHandler/Makefile
@@ -33,6 +33,10 @@ TestHandler_Linux_LFLAGS = $(TestHandler_SHLIB_PATH) -lswiftCore -lswiftGlibc -l
 	-Xlinker -export-dynamic \
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 TestHandler_LFLAGS = $(TestHandler_$(OS)_LFLAGS)
 
