--- a/IORunnerExtension/Makefile
+++ b/IORunnerExtension/Makefile
@@ -35,6 +35,10 @@ $(MODULE_2_NAME)_Linux_LFLAGS = $($(MODULE_2_NAME)_SHLIB_PATH) -lswiftCore -lswi
 	-Xlinker --exclude-libs -Xlinker ALL \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib/x86_64/$(MODULE_2_NAME).swiftmodule' \
 	-Xlinker -rpath -Xlinker '$$ORIGIN/../lib' \
+	-Xlinker -rpath -Xlinker '/usr/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/lib' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib64' \
+	-Xlinker -rpath -Xlinker '/usr/local/lib' \
 	$(SWIFT_libs)/x86_64/swift_end.o
 	
 $(MODULE_2_NAME)_LFLAGS = $($(MODULE_2_NAME)_$(OS)_LFLAGS)
