* Building with swift Preview 6 * Fixed ini parser when use = character in string. * Added update feature to the installer. * New extension! Controls bash scripts extension. * Fixed GUI bug on Centos. * Fixed shared library search paths on Centos.

--- a/Extensions/MakefileSub
+++ b/Extensions/MakefileSub
@@ -1,6 +1,7 @@
 
 # Makefile for AllExtensions
 
+include $(SOURCE_ROOT_DIR)/Extensions/BashScriptHandler/Makefile
 include $(SOURCE_ROOT_DIR)/Extensions/BouncyHandler/Makefile
 include $(SOURCE_ROOT_DIR)/Extensions/DovecotHandler/Makefile
 include $(SOURCE_ROOT_DIR)/Extensions/MysqlHandler/Makefile
@@ -12,7 +13,7 @@ include $(SOURCE_ROOT_DIR)/Extensions/SSHHandler/Makefile
 include $(SOURCE_ROOT_DIR)/Extensions/TestHandler/Makefile
 
 
-AllExtensions:  ext-BouncyHandler-make ext-DovecotHandler-make ext-MysqlHandler-make ext-NginxHandler-make ext-OpendkimHandler-make ext-PHPFastCGIHandler-make ext-PostfixHandler-make ext-SSHHandler-make ext-TestHandler-make
+AllExtensions:  ext-BashScriptHandler-make ext-BouncyHandler-make ext-DovecotHandler-make ext-MysqlHandler-make ext-NginxHandler-make ext-OpendkimHandler-make ext-PHPFastCGIHandler-make ext-PostfixHandler-make ext-SSHHandler-make ext-TestHandler-make
 
-AllExtensions-Clean:  ext-BouncyHandler-clean ext-DovecotHandler-clean ext-MysqlHandler-clean ext-NginxHandler-clean ext-OpendkimHandler-clean ext-PHPFastCGIHandler-clean ext-PostfixHandler-clean ext-SSHHandler-clean ext-TestHandler-clean
+AllExtensions-Clean:  ext-BashScriptHandler-clean ext-BouncyHandler-clean ext-DovecotHandler-clean ext-MysqlHandler-clean ext-NginxHandler-clean ext-OpendkimHandler-clean ext-PHPFastCGIHandler-clean ext-PostfixHandler-clean ext-SSHHandler-clean ext-TestHandler-clean
 
