--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,14 @@ matrix:
     - os: osx
       osx_image: xcode7.3
       env: TRAVIS_IMAGE=OSX SWIFT_VERSION=2.2 TEST_BRANCH=xcode_7.3
+      cache:
+        directories:
+          - ./Packages
     - os: osx
       osx_image: xcode8
       env: TRAVIS_IMAGE=OSX SWIFT_VERSION=3 TEST_BRANCH=xcode_8
+      cache:
+        directories:
+          - ./Packages
 script:
   - ./Travis/Build.sh
